-added a Glass sword
-changed the properties of the Sturdy Gem Sword

--- a/src/main/resources/assets/simpleswordmod/lang/en_us.json
+++ b/src/main/resources/assets/simpleswordmod/lang/en_us.json
@@ -1,6 +1,7 @@
 {
   "item.simpleswordmod.sturdy_gem": "Sturdy Gem",
   "item.simpleswordmod.sturdy_gem_sword": "Sturdy Gem Sword",
+  "item.simpleswordmod.glass_sword": "Glass Sword",
 
   "block.simpleswordmod.sturdy_gem_block": "Sturdy Gem Block",
 
